# mk_kurs

./: CONNECTIONS_I2C_UART.txt  ds18b20.c  ds18b20.h  ds18b20_CMSIS.uvguix.admitrew  ds18b20_CMSIS.uvguix.evgen  ds18b20_CMSIS.uvguix.evgenvt  ds18b20_CMSIS.uvguix.lenov  ds18b20_CMSIS.uvoptx  ds18b20_CMSIS.uvprojx  main.c
Listings/: ds18b20_CMSIS.map
Objects/: ds18b20.d  ds18b20_CMSIS.axf  ds18b20_CMSIS.build_log.htm  ds18b20_CMSIS.htm  ds18b20_CMSIS.lnp  ds18b20_CMSIS_Target 1.dep  main.d  system_stm32f10x.d
RTE/_Target_1/: RTE_Components.h
stm32_temperature_monitor/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
